# Tabuu-3.0-Dashboard

./: .gitignore  .prettierrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: node.yml  rust.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: main.css  styles.css
frontend/src/components/: FooterComponent.vue  HeaderComponent.vue  RankedComponent.vue  RatingChartComponent.vue  SearchbarComponent.vue  SidebarComponent.vue
frontend/src/helpers/: characterEmojis.ts  filterTable.ts  hardware.ts  infiniteScroll.ts  level.ts  macroDisplay.ts  mockUsers.ts  rating.ts  sortTable.ts  types.ts  userDetails.ts  userRow.ts
frontend/src/router/: index.ts
frontend/src/tests/: emoji.test.ts  hardware.test.ts  table.test.ts  user.test.ts
frontend/src/views/: CommandView.vue  HardwareInfoView.vue  HomeView.vue  LeaderboardView.vue  LevelView.vue  MacroView.vue  (+5 more)
server/: Cargo.toml  Rocket.toml  server.js  server.ts
server/src/: auth.rs  catcher.rs  emoji.rs  hwinfo.rs  json_types.rs  level.rs  main.rs  permissions.rs  rating.rs  requests.rs  routes.rs  state.rs  types.rs  utils.rs
src/: App.vue
src/assets/: main.css  styles.css
src/components/: ConfirmComponent.vue  FooterComponent.vue  HeaderComponent.vue  MacroComponent.vue
src/helpers/: adminCheck.ts  getUsers.ts  mockUsers.ts  types.ts  userDetails.ts
src/router/: index.ts
src/views/: CommandView.vue  DashboardView.vue  HomeView.vue  LeaderboardView.vue  MacroView.vue  ProfileView.vue  TrueSkillView.vue
