[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18" }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rusqlite = { version = "0.27.0", features = ["bundled", "serde_json"] }
serde_json = "1.0.99"
serde = "1.0.130"
dotenv = "0.15.0"
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["sqlite_pool"] }
http-cache-reqwest = "0.10.0"
reqwest-middleware = "0.2.2"
sysinfo = "0.29.4"
